# reddit-politeness-classifier

./: .env.example  Analysis.md  README.md  comment_cache.json  frequency.ipynb  pyproject.toml  tagged_reddit_data.json
reddit_split_data/: Awww.json  ExplainLikeImFive.json  LegalAdvice.json  TooAfraidToAsk.json  relationshipAdvice.json
top_eighty/: __main__.py  classify.py  split.py  topic.py
typings/praw/: __init__.pyi  config.pyi  const.pyi  endpoints.pyi  exceptions.pyi  objector.pyi  reddit.pyi
typings/praw/models/: __init__.pyi  auth.pyi  base.pyi  comment_forest.pyi  front.pyi  helpers.pyi  inbox.pyi  mod_action.pyi  mod_note.pyi  mod_notes.pyi  preferences.pyi  redditors.pyi  stylesheet.pyi  subreddits.pyi  trophy.pyi  user.pyi  util.pyi
typings/praw/models/list/: base.pyi  draft.pyi  moderated.pyi  redditor.pyi  trophy.pyi
typings/praw/models/listing/: domain.pyi  generator.pyi  listing.pyi
typings/praw/models/listing/mixins/: __init__.pyi  base.pyi  gilded.pyi  redditor.pyi  rising.pyi  submission.pyi  subreddit.pyi
typings/praw/models/reddit/: base.pyi  collections.pyi  comment.pyi  draft.pyi  emoji.pyi  inline_media.pyi  live.pyi  message.pyi  modmail.pyi  more.pyi  multi.pyi  poll.pyi  redditor.pyi  removal_reasons.pyi  rules.pyi  submission.pyi  subreddit.pyi  user_subreddit.pyi  widgets.pyi  wikipage.pyi
typings/praw/models/reddit/mixins/: __init__.pyi  editable.pyi  fullname.pyi  gildable.pyi  inboxable.pyi  inboxtoggleable.pyi  messageable.pyi  (+5 more)
typings/praw/util/: __init__.pyi  cache.pyi  deprecate_args.pyi  snake.pyi  token_manager.pyi
